# OISST_indices

./: .gitignore  README.md  oisst.yml
code/: src.py
notebooks/: MHWs_NZ.ipynb  OISST_realtime_NZ_detect_MHWs.ipynb  OISST_realtime_NZ_indices.ipynb  OISST_realtime_NZ_maps.ipynb  OISST_realtime_NZ_maps.py  OISST_realtime_Ninos.ipynb  OISST_realtime_Ninos_indices.ipynb  OISST_realtime_Ninos_indices_compare_climatologies.ipynb  OISST_realtime_diagnostics.ipynb  RONI_OISST_noleap.ipynb  calculate_IOD.ipynb  calculate_OISST_climatologies.ipynb  calculate_climatologies.ipynb  concat_maps.ipynb  get_OISST_OpenDAP.ipynb  update_OISST.ipynb  update_OISST.py
scripts/: OISST_realtime_IOD.py  OISST_realtime_NZ_indices.py  OISST_realtime_NZ_maps.py  OISST_realtime_Ninos_indices.py  update_OISST.py
src/: README.md  pyproject.toml  setup.py
src/OISST/: OISST.py  __init__.py
